--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://rksyntario:DW9uftt424lmZ3Kg@rkdatabasedb.f9fp0n1.mongodb.net/?retryWrites=true&w=majority&appName=rkdatabasedb
+JWT_SECRET=supersecuresecret
